--- a/app/src/main/res/layout/activity_my_recipe.xml
+++ b/app/src/main/res/layout/activity_my_recipe.xml
@@ -3,10 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.MainActivity">
+>
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
@@ -30,7 +29,7 @@
                     app:menu="@menu/top_app_bar_menu"
                     app:navigationIcon="@drawable/ic_arrow_back"
                     app:navigationIconTint="@color/black"
-                    app:title="My Categories"
+                    app:title="My ingredient"
                     app:titleCentered="true"
                     android:fontFamily="@font/font_buttons"
                     app:titleTextColor="@color/black"
@@ -46,7 +45,7 @@
                 android:padding="5dp">
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/main_RECYC_categories"
+                    android:id="@+id/recipe_RECYC_ingredients"
                     android:layout_width="match_parent"
                     android:layout_height="600dp"
                     android:layout_margin="5dp"
@@ -103,13 +102,13 @@
                         app:iconTint="@color/white" />
 
 
-<!--                    <com.google.android.material.imageview.ShapeableImageView-->
-<!--                        android:layout_width="0dp"-->
-<!--                        android:layout_height="45dp"-->
-<!--                        android:layout_gravity="top"-->
-<!--                        android:layout_marginTop="10dp"-->
-<!--                        android:layout_weight="3"-->
-<!--                        android:src="@drawable/ic_baseline_chat" />-->
+                    <!--                    <com.google.android.material.imageview.ShapeableImageView-->
+                    <!--                        android:layout_width="0dp"-->
+                    <!--                        android:layout_height="45dp"-->
+                    <!--                        android:layout_gravity="top"-->
+                    <!--                        android:layout_marginTop="10dp"-->
+                    <!--                        android:layout_weight="3"-->
+                    <!--                        android:src="@drawable/ic_baseline_chat" />-->
 
                     <View
                         android:layout_width="0dp"
@@ -126,62 +125,62 @@
                     android:orientation="vertical"
                     android:padding="5dp">
 
-<!--                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
-<!--                        android:id="@+id/message_BTN_going_out"-->
-<!--                        android:layout_width="350dp"-->
-<!--                        android:layout_height="0dp"-->
-<!--                        android:layout_marginTop="20dp"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:backgroundTint="@color/white"-->
-<!--                        android:elevation="5dp"-->
-<!--                        android:fontFamily="@font/untitled"-->
-<!--                        android:insetLeft="5dp"-->
-<!--                        android:insetTop="5dp"-->
-<!--                        android:insetRight="5dp"-->
-<!--                        android:insetBottom="5dp"-->
-<!--                        android:text="@string/going_shopping"-->
-<!--                        android:textAlignment="center"-->
-<!--                        android:textSize="40sp"-->
-<!--                        android:textStyle="bold"-->
-<!--                        app:elevation="5dp" />-->
+                    <!--                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
+                    <!--                        android:id="@+id/message_BTN_going_out"-->
+                    <!--                        android:layout_width="350dp"-->
+                    <!--                        android:layout_height="0dp"-->
+                    <!--                        android:layout_marginTop="20dp"-->
+                    <!--                        android:layout_weight="1"-->
+                    <!--                        android:backgroundTint="@color/white"-->
+                    <!--                        android:elevation="5dp"-->
+                    <!--                        android:fontFamily="@font/untitled"-->
+                    <!--                        android:insetLeft="5dp"-->
+                    <!--                        android:insetTop="5dp"-->
+                    <!--                        android:insetRight="5dp"-->
+                    <!--                        android:insetBottom="5dp"-->
+                    <!--                        android:text="@string/going_shopping"-->
+                    <!--                        android:textAlignment="center"-->
+                    <!--                        android:textSize="40sp"-->
+                    <!--                        android:textStyle="bold"-->
+                    <!--                        app:elevation="5dp" />-->
 
-<!--                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
-<!--                        android:id="@+id/message_BTN_list_update"-->
-<!--                        android:layout_width="350dp"-->
-<!--                        android:layout_height="0dp"-->
-<!--                        android:layout_marginTop="20dp"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:backgroundTint="@color/white"-->
-<!--                        android:elevation="5dp"-->
-<!--                        android:fontFamily="@font/untitled"-->
-<!--                        android:insetLeft="5dp"-->
-<!--                        android:insetTop="5dp"-->
-<!--                        android:insetRight="5dp"-->
-<!--                        android:insetBottom="5dp"-->
-<!--                        android:text="@string/list_updated"-->
-<!--                        android:textAlignment="center"-->
-<!--                        android:textSize="40sp"-->
-<!--                        android:textStyle="bold"-->
-<!--                        app:elevation="5dp" />-->
+                    <!--                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
+                    <!--                        android:id="@+id/message_BTN_list_update"-->
+                    <!--                        android:layout_width="350dp"-->
+                    <!--                        android:layout_height="0dp"-->
+                    <!--                        android:layout_marginTop="20dp"-->
+                    <!--                        android:layout_weight="1"-->
+                    <!--                        android:backgroundTint="@color/white"-->
+                    <!--                        android:elevation="5dp"-->
+                    <!--                        android:fontFamily="@font/untitled"-->
+                    <!--                        android:insetLeft="5dp"-->
+                    <!--                        android:insetTop="5dp"-->
+                    <!--                        android:insetRight="5dp"-->
+                    <!--                        android:insetBottom="5dp"-->
+                    <!--                        android:text="@string/list_updated"-->
+                    <!--                        android:textAlignment="center"-->
+                    <!--                        android:textSize="40sp"-->
+                    <!--                        android:textStyle="bold"-->
+                    <!--                        app:elevation="5dp" />-->
 
-<!--                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
-<!--                        android:id="@+id/message_BTN_list_close"-->
-<!--                        android:layout_width="350dp"-->
-<!--                        android:layout_height="0dp"-->
-<!--                        android:layout_marginTop="20dp"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:backgroundTint="@color/white"-->
-<!--                        android:elevation="5dp"-->
-<!--                        android:fontFamily="@font/untitled"-->
-<!--                        android:insetLeft="5dp"-->
-<!--                        android:insetTop="5dp"-->
-<!--                        android:insetRight="5dp"-->
-<!--                        android:insetBottom="5dp"-->
-<!--                        android:text="@string/shopping_done"-->
-<!--                        android:textAlignment="center"-->
-<!--                        android:textSize="40sp"-->
-<!--                        android:textStyle="bold"-->
-<!--                        app:elevation="5dp" />-->
+                    <!--                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
+                    <!--                        android:id="@+id/message_BTN_list_close"-->
+                    <!--                        android:layout_width="350dp"-->
+                    <!--                        android:layout_height="0dp"-->
+                    <!--                        android:layout_marginTop="20dp"-->
+                    <!--                        android:layout_weight="1"-->
+                    <!--                        android:backgroundTint="@color/white"-->
+                    <!--                        android:elevation="5dp"-->
+                    <!--                        android:fontFamily="@font/untitled"-->
+                    <!--                        android:insetLeft="5dp"-->
+                    <!--                        android:insetTop="5dp"-->
+                    <!--                        android:insetRight="5dp"-->
+                    <!--                        android:insetBottom="5dp"-->
+                    <!--                        android:text="@string/shopping_done"-->
+                    <!--                        android:textAlignment="center"-->
+                    <!--                        android:textSize="40sp"-->
+                    <!--                        android:textStyle="bold"-->
+                    <!--                        app:elevation="5dp" />-->
 
 
                 </LinearLayout>
@@ -229,5 +228,4 @@
 
 
     </androidx.drawerlayout.widget.DrawerLayout>
-
 
