--- a/app/src/main/res/layout/activity_create_recipe.xml
+++ b/app/src/main/res/layout/activity_create_recipe.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Activity_create_category"
     android:background="#BDD3EF"
-    android:layoutDirection="rtl">
-
+    tools:context=".Activities.Activity_create_recipe">
 
     <TextView
         android:layout_width="match_parent"
@@ -17,9 +14,8 @@
         android:layout_marginBottom="30dp"
 
 
-
         android:fontFamily="@font/font_buttons"
-        android:text="Create New Category"
+        android:text="Create New Recipe"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="40sp"
@@ -50,42 +46,42 @@
                 android:orientation="vertical">
 
 
-                <com.google.android.material.progressindicator.CircularProgressIndicator
-                    android:id="@+id/createCat_BAR_progress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:elevation="1dp"
-                    android:indeterminate="true"
-                    android:visibility="invisible"
-                    app:indicatorColor="#75B3FF" />
+<!--                <com.google.android.material.progressindicator.CircularProgressIndicator-->
+<!--                    android:id="@+id/createCat_BAR_progress"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:elevation="1dp"-->
+<!--                    android:indeterminate="true"-->
+<!--                    android:visibility="invisible"-->
+<!--                    app:indicatorColor="#75B3FF" />-->
 
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/createCat_FAB_profile_pic"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start|bottom"
-                    android:backgroundTint="#000000"
-                    app:borderWidth="2dp"
-                    app:elevation="8dp"
-                    app:fabCustomSize="40dp"
-                    app:srcCompat="@drawable/ic_baseline_edit"
-                    app:tint="@color/white"
-                    app:useCompatPadding="false" />
+<!--                <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--                    android:id="@+id/createCat_FAB_profile_pic"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="start|bottom"-->
+<!--                    android:backgroundTint="#000000"-->
+<!--                    app:borderWidth="2dp"-->
+<!--                    app:elevation="8dp"-->
+<!--                    app:fabCustomSize="40dp"-->
+<!--                    app:srcCompat="@drawable/ic_baseline_edit"-->
+<!--                    app:tint="@color/white"-->
+<!--                    app:useCompatPadding="false" />-->
 
 
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/createCat_IMG_user"
-                    android:layout_width="270dp"
-                    android:layout_height="170dp"
-                    android:layout_gravity="center_horizontal"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/img_default_category"
-                    app:civ_border_color="#B2000000"
-                    app:civ_border_width="3dp" />
+<!--                <com.google.android.material.imageview.ShapeableImageView-->
+<!--                    android:id="@+id/createCat_IMG_user"-->
+<!--                    android:layout_width="270dp"-->
+<!--                    android:layout_height="170dp"-->
+<!--                    android:layout_gravity="center_horizontal"-->
+<!--                    android:clickable="true"-->
+<!--                    android:focusable="true"-->
+<!--                    android:scaleType="centerCrop"-->
+<!--                    android:src="@drawable/img_default_category"-->
+<!--                    app:civ_border_color="#B2000000"-->
+<!--                    app:civ_border_width="3dp" />-->
             </FrameLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -93,7 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:hint="Insert category name"
+                android:hint="Insert recipe name"
                 android:textColorHint="@color/black"
                 app:boxBackgroundColor="#ECE8E8"
                 app:boxBackgroundMode="filled"
