--- a/app/src/main/res/layout/list_ingredient.xml
+++ b/app/src/main/res/layout/list_ingredient.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    >
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
