--- a/app/src/main/res/layout/ingridient_cards.xml
+++ b/app/src/main/res/layout/ingridient_cards.xml
@@ -5,31 +5,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Activity_ingredient"
     android:background="#BDD3EF">
 
 
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        android:id="@+id/editItem_EDT_notes"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:hint="Method Steps"-->
+<!--        android:paddingBottom="10dp"-->
+<!--        app:counterEnabled="true"-->
+<!--        app:counterMaxLength="500">-->
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/editItem_EDT_notes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Method Steps"
-            android:paddingBottom="10dp"
-            app:counterEnabled="true"
-            app:counterMaxLength="500">
+<!--        <com.google.android.material.textfield.TextInputEditText-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:fontFamily="@font/font_buttons"-->
+<!--            android:inputType="textAutoCorrect"-->
+<!--            android:maxLines="3"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textSize="16sp"-->
+<!--            android:textStyle="bold" />-->
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/font_buttons"
-                android:inputType="textAutoCorrect"
-                android:maxLines="3"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card"
