--- a/app/src/main/res/layout/recipe_cards.xml
+++ b/app/src/main/res/layout/recipe_cards.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
     >
 
 
@@ -20,28 +19,30 @@
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="#03A9F4">
+            android:layout_height="60dp"
+            android:background="#75B3FF"
+            android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
-                android:src="#A2D5DC"/>
+                android:layout_gravity="center"
+                android:background="#A2D5DC"
+                android:src="@drawable/img_chef"/>
+
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="5dp"
-                >
+                android:padding="5dp">
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/list_LBL_title"
+                    android:id="@+id/recipe_LBL_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Recipe Name"
                     android:fontFamily="@font/font_buttons"
+                    android:text="Recipe Name"
                     android:textColor="#000000"
                     android:textSize="25sp" />
 
@@ -53,13 +54,7 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/list_IMG_image"
-        android:layout_width="100dp"
-        android:layout_height="45dp"
-        android:layout_alignBottom="@id/card"
-        android:elevation="10dp"
-        android:src="@drawable/img_chef" />
+
 
 </RelativeLayout>
 
